2013-05-30  Glenn Morris  <rgm@gnu.org>

	* image.el (image-animated-p): Tweak definition.

	* net/rlogin.el (rlogin-program, rlogin-explicit-args): Default to ssh.
	(rlogin-process-connection-type): Tweak default.  Add set-after.
	(rlogin-host): Doc fix.
	(rlogin): Tweak prompt.
	(rlogin-tab-or-complete): Use completion-at-point rather than alias.

	* net/net-utils.el (nslookup-mode-map, ftp-mode-map):
	* progmodes/tcl.el (inferior-tcl-mode-map):
	Use completion-at-point rather than obsolete alias.

	* emacs-lisp/eieio.el (eieio-eval-default-p): Move before use.

	* minibuffer.el (read-file-name-completion-ignore-case):
	Move before completion--in-region, for eager macro expansion.

2013-05-29  Juri Linkov  <juri@jurta.org>

	* replace.el (occur-engine): Rename `globalcount' to `global-lines'
	for total count of matching lines.  Add `global-matches' for total
	count of matches.  Rename `matches' to `lines' for count of
	matching lines.  Add `matches' for count of matches.
	Rename `lines' to `curr-line' for line count.  Rename `prev-lines'
	to `prev-line' for line number of prev match endpt.
	Increment `matches' for every match.  Print the number of
	matching lines in the header.
	(occur-context-lines): Rename `lines' to `curr-line'.
	Rename `prev-lines' to `prev-line'.  (Bug#14017)

2013-05-29  Juri Linkov  <juri@jurta.org>

	* replace.el (perform-replace): Add `skip-read-only-count',
	`skip-filtered-count', `skip-invisible-count' let-bound to 0.
	Increment them for corresponding conditions and report the number
	of skipped occurrences in the final message.  (Bug#11746)
	(query-replace, query-replace-regexp, query-replace-regexp-eval)
	(replace-string, replace-regexp): Doc fix.

2013-05-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/trace.el (trace--read-args): Provide a default.

	* emacs-lisp/lisp-mode.el (lisp-mode-shared-map): Inherit from
	prog-mode-map.

2013-05-29  Leo Liu  <sdl.web@gmail.com>
